feat(WN-auth): improve some security settings and create Jwt Service

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,15 @@ spring:
   application:
     name: selfkeep
 
-
+  datasource:
+    url: "jdbc:postgresql://localhost:5432/self-keep"
+    username: postgres
+    password: root
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    show-sql: false
 
 server:
   port: 9000
+jwt:
+  secret: ${JWT_SECRET}
